[gd_scene load_steps=7 format=3 uid="uid://dtwrdjth048su"]

[ext_resource type="Script" path="res://scenes/core/map_configurer.gd" id="1_v5not"]
[ext_resource type="Script" path="res://scenes/core/assets/map_data_manager.gd" id="2_mi6hj"]
[ext_resource type="Script" path="res://scenes/resources/beatmap_info.gd" id="4_fmmta"]

[sub_resource type="Gradient" id="Gradient_jt01e"]
offsets = PackedFloat32Array(0.963964, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0le68"]
gradient = SubResource("Gradient_jt01e")
width = 256
height = 256

[sub_resource type="Resource" id="Resource_g5lnc"]
script = ExtResource("4_fmmta")
version = "2.1.0"
song_name = ""
song_subname = ""
song_author_name = ""
level_author_name = ""
beats_per_minute = 0.0
shuffle = 0.0
shuffle_period = 0.5
preview_start = 0.0
preview_duration = 0.0
song_filename = ""
cover_image_filename = ""
environment_name = ""
all_directions_environment_name = "GlassDesertEnvironment"
song_time_offset = 0.0
environment_names = Array[String]([])
color_schemes = []
custom_data = {}
difficulty_beatmap_sets = Array[Resource("res://scenes/resources/beatmap_set.gd")]([])

[node name="Map Configurer" type="Control" node_paths=PackedStringArray("map_data_manager", "song_name_edit", "song_subname_edit", "song_author_edit", "map_author_edit", "cover_display", "cover_filename_edit", "song_filename_edit", "song_bpm_edit", "song_preview_start_edit", "song_preview_duration_edit", "play_preview_button", "preview_audio_stream", "preview_timer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5not")
map_data_manager = NodePath("MapDataManager")
song_name_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/SongNameEdit")
song_subname_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer4/HBoxContainer/SongSubnameEdit")
song_author_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/SongAuthorEdit")
map_author_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer/MapAuthorEdit")
cover_display = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TextureRect")
cover_filename_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer6/HBoxContainer/CoverFilenameEdit")
song_filename_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer5/HBoxContainer/SongFilenameEdit")
song_bpm_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer7/HBoxContainer/BPMSpinBox")
song_preview_start_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer8/PreviewStartContainer/PreviewStartSpinBox")
song_preview_duration_edit = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer9/PreviewDurationContainer/PreviewDurationSpinBox")
play_preview_button = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer10/PlayPreviewButton")
preview_audio_stream = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer10/AudioStreamPlayer")
preview_timer = NodePath("InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer10/PreviewTimer")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"Background"

[node name="InfoDatThingy" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.0444444
anchor_right = 0.55
anchor_bottom = 0.955556
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="InfoDatThingy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="InfoDatThingy/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PanelContainer" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Song Name"

[node name="SongNameEdit" type="LineEdit" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PLACEHOLDER"

[node name="PanelContainer4" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Song Subname"

[node name="SongSubnameEdit" type="LineEdit" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PLACEHOLDER"

[node name="PanelContainer2" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Song Author"

[node name="SongAuthorEdit" type="LineEdit" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PLACEHOLDER"

[node name="PanelContainer3" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Map Author"

[node name="MapAuthorEdit" type="LineEdit" parent="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PLACEHOLDER"

[node name="HSeparator" type="HSeparator" parent="InfoDatThingy/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_0le68")
expand_mode = 5

[node name="PanelContainer6" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer6"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer6/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Cover Filename"

[node name="CoverFilenameEdit" type="LineEdit" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer6/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PLACEHOLDER"

[node name="VBoxContainer2" type="VBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer5" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer5"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Song Filename"

[node name="SongFilenameEdit" type="LineEdit" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PLACEHOLDER"

[node name="PanelContainer7" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer7"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer7/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Song BPM"

[node name="BPMSpinBox" type="SpinBox" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer7/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 99999.0
step = 0.0
suffix = "BPM"
custom_arrow_step = 1.0

[node name="PanelContainer10" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 160)
layout_mode = 2

[node name="PlayPreviewButton" type="Button" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer10"]
layout_mode = 2
text = "Play Preview"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer10"]

[node name="PreviewTimer" type="Timer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer10"]
one_shot = true

[node name="PanelContainer8" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2

[node name="PreviewStartContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer8"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer8/PreviewStartContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Preview Start"
vertical_alignment = 1

[node name="PreviewStartSpinBox" type="SpinBox" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer8/PreviewStartContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 9999.0
step = 0.001
custom_arrow_step = 0.1

[node name="PanelContainer9" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2

[node name="PreviewDurationContainer" type="HBoxContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer9"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer9/PreviewDurationContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Preview Duration"

[node name="PreviewDurationSpinBox" type="SpinBox" parent="InfoDatThingy/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer9/PreviewDurationContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 9999.0
step = 0.001
custom_arrow_step = 0.1

[node name="HSeparator2" type="HSeparator" parent="InfoDatThingy/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer8" type="PanelContainer" parent="InfoDatThingy/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DifficultyThingy" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.0444444
anchor_right = 0.95
anchor_bottom = 0.955556
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="DifficultyThingy"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -112.0
offset_right = 96.0
offset_bottom = -48.0004
grow_horizontal = 2
grow_vertical = 0
text = "Enter Editor"

[node name="MapDataManager" type="Node" parent="."]
script = ExtResource("2_mi6hj")
info_dat_data = SubResource("Resource_g5lnc")

[connection signal="text_changed" from="InfoDatThingy/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/SongNameEdit" to="." method="_on_song_name_edit_text_changed"]
[connection signal="pressed" from="DifficultyThingy/Button" to="." method="_on_button_pressed"]
